{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 58,
  "lineage": "9e77db58-3552-f30c-6b7a-9facaeaa35ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proj_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997701370703:internet-gateway/igw-082b67e967da43c86",
            "id": "igw-082b67e967da43c86",
            "owner_id": "997701370703",
            "tags": {
              "Name": "proj-igw"
            },
            "tags_all": {
              "Name": "proj-igw"
            },
            "vpc_id": "vpc-073dd7bee9b512a84"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "proj_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997701370703:route-table/rtb-046a6375b16b34bc4",
            "id": "rtb-046a6375b16b34bc4",
            "owner_id": "997701370703",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082b67e967da43c86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proj-route-table"
            },
            "tags_all": {
              "Name": "proj-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-073dd7bee9b512a84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.proj_igw",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "proj_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06530f21df6f1e6e9",
            "route_table_id": "rtb-046a6375b16b34bc4",
            "subnet_id": "subnet-061cf1b9120f8d4db"
          },
          "dependencies": [
            "aws_internet_gateway.proj_igw",
            "aws_route_table.proj_route_table",
            "aws_subnet.proj_subnet",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proj_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997701370703:security-group/sg-0a9a807c87e8ed36e",
            "description": "Allow SSH, HTTP, and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9a807c87e8ed36e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "proj-sg",
            "name_prefix": "",
            "owner_id": "997701370703",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proj-sg"
            },
            "tags_all": {
              "Name": "proj-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-073dd7bee9b512a84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "proj_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997701370703:subnet/subnet-061cf1b9120f8d4db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061cf1b9120f8d4db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "997701370703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proj-subnet"
            },
            "tags_all": {
              "Name": "proj-subnet"
            },
            "vpc_id": "vpc-073dd7bee9b512a84"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proj_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997701370703:vpc/vpc-073dd7bee9b512a84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ec69457b5c782fe9",
            "default_route_table_id": "rtb-07a82f4f872be17ef",
            "default_security_group_id": "sg-0dae3e4464559a1f4",
            "dhcp_options_id": "dopt-07705162895b80b43",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073dd7bee9b512a84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a82f4f872be17ef",
            "owner_id": "997701370703",
            "tags": {
              "Name": "proj-vpc"
            },
            "tags_all": {
              "Name": "proj-vpc"
            }
          }
        }
      ]
    }
  ]
}